fixed css grid rows on small screens

--- a/styles.css
+++ b/styles.css
@@ -284,7 +284,7 @@ main {
   grid-area: main;
   display: grid;
   grid-template-columns: auto 300px;
-  grid-template-rows: auto;
+  grid-template-rows: repeat(2, 1fr);
   grid-template-areas:
     'projects announcements'
     'projects trending';
@@ -295,9 +295,11 @@ main {
 .projects {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-row: span 2;
   grid-auto-rows: min-content;
   gap: 1rem;
   padding: 1rem;
+  grid
 }
 
 .projects-title {
@@ -472,6 +474,7 @@ main {
   }
   main {
     grid-template-columns: min-content;
+    grid-template-rows:1fr;
     grid-template-areas:
       'projects'
       'announcements'
@@ -480,6 +483,7 @@ main {
   }
   .projects {
     grid-template-columns:1fr;
+    grid-row: 1/2;
     width: 75vw;
   }
 }
